@@ -96,6 +96,16 @@ name|java
 operator|.
 name|io
 operator|.
+name|IOException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
 name|OutputStream
 import|;
 end_import
@@ -145,6 +155,20 @@ operator|.
 name|fs
 operator|.
 name|ContentSummary
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|fs
+operator|.
+name|FSDataOutputStream
 import|;
 end_import
 
@@ -6185,6 +6209,180 @@ argument_list|()
 argument_list|)
 argument_list|)
 expr_stmt|;
+block|}
+comment|/**    * File count on root , should return total value of files in Filesystem    * when one folder contains files more than "dfs.content-summary.limit".    */
+annotation|@
+name|Test
+DECL|method|testHugeFileCount ()
+specifier|public
+name|void
+name|testHugeFileCount
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|MiniDFSCluster
+name|cluster
+init|=
+literal|null
+decl_stmt|;
+name|Configuration
+name|conf
+init|=
+operator|new
+name|Configuration
+argument_list|()
+decl_stmt|;
+name|conf
+operator|.
+name|setInt
+argument_list|(
+literal|"dfs.content-summary.limit"
+argument_list|,
+literal|4
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|cluster
+operator|=
+operator|new
+name|MiniDFSCluster
+operator|.
+name|Builder
+argument_list|(
+name|conf
+argument_list|)
+operator|.
+name|numDataNodes
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|build
+argument_list|()
+expr_stmt|;
+name|DistributedFileSystem
+name|dfs
+init|=
+name|cluster
+operator|.
+name|getFileSystem
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|1
+init|;
+name|i
+operator|<=
+literal|5
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|FSDataOutputStream
+name|out
+init|=
+name|dfs
+operator|.
+name|create
+argument_list|(
+operator|new
+name|Path
+argument_list|(
+literal|"/Folder1/"
+operator|+
+literal|"file"
+operator|+
+name|i
+argument_list|)
+argument_list|,
+operator|(
+name|short
+operator|)
+literal|1
+argument_list|)
+decl_stmt|;
+name|out
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+name|FSDataOutputStream
+name|out
+init|=
+name|dfs
+operator|.
+name|create
+argument_list|(
+operator|new
+name|Path
+argument_list|(
+literal|"/Folder2/file6"
+argument_list|)
+argument_list|,
+operator|(
+name|short
+operator|)
+literal|1
+argument_list|)
+decl_stmt|;
+name|out
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|ContentSummary
+name|contentSummary
+init|=
+name|dfs
+operator|.
+name|getContentSummary
+argument_list|(
+operator|new
+name|Path
+argument_list|(
+literal|"/"
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|6
+argument_list|,
+name|contentSummary
+operator|.
+name|getFileCount
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+if|if
+condition|(
+name|cluster
+operator|!=
+literal|null
+condition|)
+block|{
+name|cluster
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+name|cluster
+operator|=
+literal|null
+expr_stmt|;
+block|}
+block|}
 block|}
 block|}
 end_class
